7.Cloudformation-Terraform/1.cloudformation/stacks/sg.yml
---
AWSTemplateFormatVersion: "2010-09-09"

Description: Security Groups

Resources:

  ELBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          VpcId
      GroupName: 'cf-elb-sg'
      GroupDescription: 'CF ELB Security Group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp:
            Fn::ImportValue:
              VpcCidrBlock

  WebServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          VpcId
      GroupName: 'cf-web-server-sg'
      GroupDescription: 'CF Web Server Security Group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ELBSG
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp:
            Fn::ImportValue:
              VpcCidrBlock

  DBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          VpcId
      GroupName: 'cf-database-sg'
      GroupDescription: 'CF Database Security Group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp:
            Fn::ImportValue:
              VpcCidrBlock
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: 0
          ToPort: 0
          CidrIp:
            Fn::ImportValue:
              VpcCidrBlock

  RedisSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          VpcId
      GroupName: 'cf-redis-sg'
      GroupDescription: 'CF Redis Security Group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          CidrIp:
            Fn::ImportValue:
              VpcCidrBlock
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: 0
          ToPort: 0
          CidrIp:
            Fn::ImportValue:
              VpcCidrBlock

  MemcachedSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          VpcId
      GroupName: 'cf-memcached-sg'
      GroupDescription: 'CF Memcached Security Group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 11211
          ToPort: 11211
          CidrIp:
            Fn::ImportValue:
              VpcCidrBlock
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: 0
          ToPort: 0
          CidrIp:
            Fn::ImportValue:
              VpcCidrBlock



Outputs:

  ELBSGId:
    Description: ELB security group Id
    Value: !Ref ELBSG
    Export:
      Name: ELBSGId

  WebServerSGId:
    Description: Web Server security group Id
    Value: !Ref WebServerSG
    Export:
      Name: WebServerSGId

  DBSGId:
    Description: Database security group Id
    Value: !Ref DBSG
    Export:
      Name: DBSGId

  RedisSGId:
    Description: Web Server security group Id
    Value: !Ref RedisSG
    Export:
      Name: RedisSGId

  MemcachedSGId:
    Description: Web Server security group Id
    Value: !Ref MemcachedSG
    Export:
      Name: MemcachedSGId
